Rename efflux -> works

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: "About"
   href: "/about/"
 
-- title: "Efflux"
-  href: "/efflux/"
+- title: "Works"
+  href: "/works/"
 
 - title: "Research"
   href: "/research/"
