Add emojis to works page

--- a/_data/effluvia.yml
+++ b/_data/effluvia.yml
@@ -1,23 +1,23 @@
-- title: "Journal Publications"
+- title: "📚 Journal Publications"
   slug: "journal"
   open: true
-- title: "Conference Papers"
+- title: "🧳 Conference Papers"
   slug: "conference"
   open: true
-- title: "Workshop Papers"
+- title: "🏃 Workshop Papers"
   slug: "workshop"
   open: true
-- title: "Extended Abstracts"
+- title: "🪧 Extended Abstracts"
   slug: "abstract"
-- title: "Preprints"
+- title: "📝 Preprints"
   slug: "preprint"
-- title: "Miscellanea"
+- title: "✨ Miscellanea"
   slug: "misc"
-- title: "Research Software"
+- title: "🔬 Research Software"
   slug: "research"
-- title: "Prosocial Software"
+- title: "💖 Prosocial Software"
   slug: "prosocial"
-- title: "Incidental Software"
+- title: "🧰 Incidental Software"
   slug: "incidental"
-- title: "Teaching Materials"
+- title: "🧑‍🏫 Teaching Materials"
   slug: "teaching"
