--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "_includes/professional-statements"]
 	path = _includes/professional-statements
-	url = git@github.com:mmore500/professional-statements.git
+	url = https://github.com/mmore500/professional-statements.git
