Add in print GPTP chapter

--- a/_data/effluvia.yml
+++ b/_data/effluvia.yml
@@ -1,6 +1,9 @@
 - title: "📚 Journal Publications"
   slug: "journal"
   open: true
+- title: "📖 Book Chapters"
+  slug: "chapter"
+  open: true
 - title: "🧳 Conference Papers"
   slug: "conference"
   open: true
