Update job title in footer

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Matthew Andres Moreno
 email: m.more500@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  doctoral student, Michigan State University
+  postdoctoral scholar, University of Michigan
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mmore500.github.io" # the base hostname & protocol for your site
 twitter_username: morenomatthewa
