--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,6 +1,6 @@
 - title: "A Killer Fix for Scrunched Axes, Step-by-step"
   url: "https://towardsdatascience.com/unscrunch-your-axes-with-easy-multiscale-data-visualization-in-matplotlib-69a30e96c68f?source=friends_link&sk=df15b14b63ce5b5240e6058b5875f6ee"
-  where: "towards data science"
+  where: Towards Data Science
   where_url: "https://towardsdatascience.com"
   date: 2023-12-29
 - title: "WAVES Workshop Learning Outcomes"
