Add Level Up Coding post link

--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,3 +1,8 @@
+- title: "Nice Zigzag Traversal with Itertools"
+  url: "https://levelup.gitconnected.com/nice-zigzag-traversal-with-itertools-39937b96b342?source=friends_link&sk=d6f6ba6c2c93e5e94b174166a503f6b7"
+  where: "Level Up Coding"
+  where_url: "https://levelup.gitconnected.com/"
+  date: 2024-01-01
 - title: "A Killer Fix for Scrunched Axes, Step-by-step"
   url: "https://towardsdatascience.com/unscrunch-your-axes-with-easy-multiscale-data-visualization-in-matplotlib-69a30e96c68f?source=friends_link&sk=df15b14b63ce5b5240e6058b5875f6ee"
   where: Towards Data Science
