Rename category to add outreach, move up on page

--- a/_data/effluvia.yml
+++ b/_data/effluvia.yml
@@ -16,11 +16,11 @@
   slug: "preprint"
 - title: "✨ Miscellanea"
   slug: "misc"
+- title: "🧑‍🏫 Teaching and Outreach"
+  slug: "teaching"
 - title: "🔬 Research Software"
   slug: "research"
 - title: "💖 Prosocial Software"
   slug: "prosocial"
 - title: "🧰 Incidental Software"
   slug: "incidental"
-- title: "🧑‍🏫 Teaching Materials"
-  slug: "teaching"
