--- a/_data/highlights.yml
+++ b/_data/highlights.yml
@@ -1,4 +1,4 @@
+- 'moreno2024structured'
+- 'moreno2024trackable'
 - 'moreno2021case'
 - 'moreno2022exploring'
-- 'moreno2022hereditary'
-- 'moreno2021conduit'
