--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,3 +1,8 @@
+- title: "Large-Scale Evolution Simulations on PSC’s Neocortex Tackle Questions about Hypermutator Evolution"
+  url: "https://www.psc.edu/neocortex-evolution-simulations/"
+  where: "Pittsburgh Supercomputing Center Science Highlights"
+  where_url: "https://www.psc.edu/category/sciencehighlights/"
+  date: 2025-02-05
 - title: "Let Your Data Breathe: Tips, tricks, & tools to level up your FacetGrid game"
   url: "https://levelup.gitconnected.com/let-your-data-breathe-7a9129db7af9?source=friends_link&sk=d2502e33c4f929bb8112a3bca9ea8015"
   where: "Level Up Coding"
